# VKRendering

./: .gitignore  CmakeLists.txt  README.md
Demo/Source/: Main.cpp
Math/: CMakeLists.txt
Math/Header/Mat2/: Mat2.h
Math/Header/Mat3/: Mat3.h
Math/Header/Mat4/: Mat4.h
Math/Header/Quat/: Quat.h
Math/Header/Vec2/: Vec2.h
Math/Header/Vec3/: Vec3.h
Math/Header/Vec4/: Vec4.h
Math/Source/Mat2/: Mat2.cpp
Math/Source/Mat3/: Mat3.cpp
Math/Source/Mat4/: Mat4.cpp
Math/Source/Quat/: Quat.cpp
Math/Source/Vec2/: Vec2.cpp
Math/Source/Vec3/: Vec3.cpp
Math/Source/Vec4/: Vec4.cpp
Renderer/: CmakeLists.txt
Renderer/Header/: Animation.h  Animator.h  Application.h  Bone.h  Camera.h  GameObject.h  Light.h  LineDrawer.h  Mesh.h  Model.h  ResourceManager.h  Scene.h  Shader.h  StorageBuffer.h  Texture.h  ThreadPool.h  UniformBuffer.h  VKRenderer.h  VkDescriptor.h  Window.h
Renderer/Header/assimp/lib/: assimp-vc143-mtd.exp
Renderer/Shader/: debugFrag.frag  debugVertex.vert  frag.frag  vertex.vert  vertexSquarre.vert
Renderer/Source/: Animation.cpp  Animator.cpp  Application.cpp  Bone.cpp  Camera.cpp  GameObject.cpp  Light.cpp  LineDrawer.cpp  Mesh.cpp  Model.cpp  ResourceManager.cpp  Shader.cpp  StorageBuffer.cpp  Texture.cpp  ThreadPool.cpp  UniformBuffer.cpp  VKRenderer.cpp  VkDescriptor.cpp  Window.cpp
